[project]
name = "flourishing-network"
version = "0.1.0"
description = "Network analysis for openflourishing.org"
authors = [
    {name = "pythoro",email = "pythoro@mindquip.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (>=2.0.0,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "networkx (>=3.2.*,<4.0.0)"
]
packages = [
    { include = "flourishing_network"},
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.3"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-svg2pdfconverter = "^1.2.2"
cairosvg = "^2.7.1"
bump2version = "^1.0.1"
ruff = "^0.4.1"
pre-commit = "^3.7.0"
coverage = "^7.5.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Needed for discovery
line-length = 79
output-format = "concise"

[tool.ruff.lint]
select = ["E", "F", "B", "C90", "I", "UP", "SIM", "D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
# Selectively ignore annotation and documentation on older modules.

